Updated to add currency!
